# anki-generator

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  bacon.toml
.github/workflows/: publish-image.yml
src/: audio.rs  error.rs  llm.rs  llm2.rs  main.rs  router.rs  templates.rs  zip.rs
templates/: index.html  layout.html  translate.html
