[package]
name = "anki-generator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
dotenv = "0.15.0"
openai_api_rust = "0.1.9"
tokio = { version = "1.48.0", features = ["full"] }
listenfd = "1.0"
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
serde = "1.0.228"
async-openai = "0.32.0"
async-openai-compat = "0.30.3"
serde_json = "1.0.145"
schemars = "1.1.0"
anyhow = "1.0.100"
urlencoding = "2.1.3"
reqwest = "0.12.28"
